<resources>
    <string name="app_name">VolunteerConnect</string>
    <string name="app_name_head">Volunteer \nConnect</string>
    <string name="action_events">Events</string>
    <string name="action_all_events">All Events</string>
    <string name="action_home">Home</string>
    <string name="action_profile">Profile</string>
    <string name="action_jobs">Events</string>
    <string name="action_requests">Requests</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back 👋</string>
    <string name="close">close</string>
    <string name="sign_in_to_your_account">I am happy to see you again. You can \ncontinue where you left off by logging in</string>
    <string name="email">Email or Username</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_head">Forgot password</string>
    <string name="continue_txt">Continue</string>
    <string name="don_t_have_an_account">Don\'t have an account? <b>Sign Up</b></string>
    <string name="sign_up">Sign up as Volunteer</string>
    <string name="sign_up_organization">Sign Up as Organization</string>
    <string name="register_as_note">Register as an individual user or organization. Experience seamless collaboration and growth with us!</string>
    <string name="signup_note">Hello, I guess you are new around here. You can start using the application after sign up.</string>
    <string name="forgot_pass_dialogue"><b>Did someone forget their password?</b>\n\nThat\'s ok....\nJust enter the email address you\'ve used to register with us and we\'ll send you a reset link!</string>
    <string name="username">Username</string>
    <string name="password_criteria">Your Password must be 6 or more characters long.</string>
<!--    <string name="password_criteria">Your Password must be 6 or more characters long &amp; contain a mix of upper &amp; lower case letters, numbers &amp; symbols.</string>-->
    <string name="create_account">Create an Account</string>
    <string name="signing_up">Already have an account? <b>Sign In</b></string>
    <string name="profile_picture">Profile Picture</string>

    // Internet Response State
    <string name="check_internet_connection">Couldn\'t reach server. Check your internet connection.</string>
    <string name="error_http">Something went wrong. Please try again later.</string>
    <string name="error_internet_turned_off">This app requires an active internet connection to be used.</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="error_connection_failed">The connection failed.</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="welcome_text">Good Morning, Check</string>
    <string name="find_your_nearest">Find Your Nearest</string>
    <string name="best_rated_organizations">Best Rated Organizations</string>
    <string name="check_them_out">Check them out to</string>
    <string name="find_by_categories">Find by Categories</string>
    <string name="map">map</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="update">Update Profile</string>
    <string name="retry">Retry</string>
    <string name="add">Add</string>
    <string name="add_ques">Add Question</string>
    <string name="add_event">Add Event</string>
    <string name="add_post">Add Post</string>
    <string name="upload_image">Upload Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="volunteer_count">Volunteer Count</string>
    <string name="skills">Skills</string>
    <string name="event_type">Event Type</string>
    <string name="private_text">Private</string>
    <string name="fee_text">Fee</string>
    <string name="public_text">Public</string>
    <string name="free">Free</string>
    <string name="paid">Paid</string>
    <string name="event_fee">Event Fees</string>
    <string name="payment">Payment <font size = "30">(per person)</font></string>
    <string name="payment_only">Payment</string>
    <string name="fee_hint">Fee <font size = "30">(per person)</font></string>
    <string name="proofs_need">Proofs Need</string>
    <string name="goodies">Goodies</string>
    <string name="timing">Event Timings</string>
    <string name="start_time_and_date">Start Time and Date</string>
    <string name="start_end_time_and_date">Start &amp; End Time and Date</string>
    <string name="end_time_and_date">End Time and Date</string>
    <string name="resource_center">Upload Resource Center</string>
    <string name="resource_center_title">Resource Center</string>
    <string name="add_questions">Add Questions</string>
    <string name="forum">Forum</string>
    <string name="forum_label">Create Forum with the Event</string>
    <string name="forum_name">Forum Name</string>
    <string name="forum_name_label">By default Forum Name is given. If you wish to change you can rename here.</string>
    <string name="set_name">Set Name</string>
    <string name="category">Category</string>
    <string name="delete">Delete</string>
    <string name="delete_ques">Delete Question</string>
    <string name="no_questions">No Questions! Click on Add Questions to Add.</string>
    <string name="location">Location</string>
    <string name="about_event">About Event</string>
    <string name="apply">Apply</string>
    <string name="event_points">Event Points</string>
    <string name="enter_image_url">Enter Image URL</string>
    <string name="gallery">Gallery</string>
    <string name="done">Done</string>
    <string name="questions">Questions</string>
    <string name="write_answer">Write Answer</string>
    <string name="mandatory_fields">* fields are required to be filled</string>
    <string name="accept_request">Accept Request</string>
    <string name="reject_request">Reject Request</string>
    <string name="answers">Answers</string>
    <string name="post_title">Post Title</string>
    <string name="post_body">Post Body</string>
    <string name="delete_post">Delete Post</string>
    <string name="edit_post">Edit Post</string>
    <string name="open_in_maps">Open in Maps</string>
    <string name="focus">Focus</string>
    <string name="go_to_event_page">Go to Event Page</string>
    <string name="saved_events">Saved Events</string>


</resources>