<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:orderInCategory="100"
        android:title="@string/action_home" />

    <item
        android:id="@+id/homeOrgFragment"
        android:icon="@drawable/home"
        android:orderInCategory="100"
        android:title="@string/action_home" />

    <item
        android:id="@+id/action_community"
        android:icon="@drawable/comm"
        android:orderInCategory="100"
        android:title="@string/action_events" />

    <item
        android:id="@+id/action_connections"
        android:icon="@drawable/network"
        android:orderInCategory="100"
        android:title="@string/action_requests" />

    <item
        android:id="@+id/action_jobs"
        android:icon="@drawable/jobs"
        android:orderInCategory="100"
        android:title="@string/forum" />

</menu>