<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Login.LoginFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_20ssp"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_in_to_your_account"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        app:hintTextAppearance="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_sign_in"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bottom_bg"
            android:drawableStart="@drawable/ic_user"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:drawablePadding="@dimen/_20sdp"
            android:drawableTint="@android:color/darker_gray"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        app:hintTextAppearance="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/til_email"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/darker_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bottom_bg"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:drawableStart="@drawable/ic_pass"
            android:drawablePadding="@dimen/_20sdp"
            android:drawableTint="@android:color/darker_gray"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:contextClickable="true"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground"
        android:fontFamily="@font/poppins"
        android:hapticFeedbackEnabled="true"
        android:text="@string/forgot_password"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@id/til_pass"
        app:layout_constraintTop_toBottomOf="@id/til_pass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="@id/til_pass"
        app:layout_constraintEnd_toEndOf="@id/tv_forgot_pass"
        android:text="@string/login"
        android:textColor="@color/toolbar_color"
        android:textAllCaps="false"
        android:background="@drawable/bg_rounded_tab_look"
        android:backgroundTint="@color/accent_color"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_pass"
        app:cornerRadius="@dimen/_5sdp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_no_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/_25sdp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>