<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".Ui.Events.EventVolunteerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:padding="@dimen/_10sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/tv_welcome_fp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_welcome_fp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_welcome_fp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/add_event"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            app:fontFamily="@font/poppins_medium"
            app:layout_constraintStart_toEndOf="@id/iv_back"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_volunteerCount"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome_fp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_volunteerCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bottom_bg"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/volunteer_count"
                android:inputType="number"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/edittext_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_skills"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_volunteerCount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_skills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bottom_bg"
                android:fontFamily="@font/poppins_medium"
                android:gravity="top|start"
                android:hint="@string/skills"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:textCursorDrawable="@drawable/edittext_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_skills"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="@dimen/_5sdp"
            app:chipSpacingVertical="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_skills">

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_event_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/event_type"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_skills" />

        <RadioGroup
            android:id="@+id/radio_event_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_event_head">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/r_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/public_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/r_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/private_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_private"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_event_type">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_private"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bottom_bg"
                android:fontFamily="@font/poppins_medium"
                android:gravity="top|start"
                android:hint="@string/proofs_need"
                android:inputType="textCapSentences|textMultiLine"
                android:textCursorDrawable="@drawable/edittext_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_event_paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/event_fee"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_private" />

        <RadioGroup
            android:id="@+id/radio_event_paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_event_paid">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/r_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/free"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/r_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/paid"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_payment"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_event_paid">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bottom_bg"
                android:fontFamily="@font/poppins_medium"
                android:gravity="top|start"
                android:hint="@string/payment"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/edittext_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:hintTextAppearance="@style/TextLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_payment">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bottom_bg"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/edittext_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_rounded_tab_look"
            android:backgroundTint="@color/accent_color"
            android:clickable="true"
            android:drawableTint="@color/white"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/toolbar_color"
            android:textSize="@dimen/_13ssp"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>