<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Ui.Register.RegisterAsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_app_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_head"
        android:textSize="@dimen/_18ssp"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/black"
        app:fontFamily="@font/poppins_medium"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_head"
        app:lottie_loop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:lottie_autoPlay="true"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        app:lottie_rawRes="@raw/register_anim"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_signup_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/register_as_note"
        android:textAlignment="textStart"
        app:fontFamily="@font/poppins"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_register_user"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register_user"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/bg_rounded_tab_look"
        android:backgroundTint="@color/accent_color"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_up"
        android:foreground="?selectableItemBackground"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textAllCaps="false"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/toolbar_color"
        android:textSize="@dimen/_13ssp"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register_organization"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register_organization"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/sign_up_organization"
        android:textColor="@color/toolbar_color"
        android:textAllCaps="false"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center"
        android:textAlignment="center"
        android:foreground="?selectableItemBackground"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/tv_no_acc"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/bg_rounded_tab_look"
        android:backgroundTint="@color/accent_color"
        android:fontFamily="@font/poppins"
        android:textSize="@dimen/_13ssp"
        app:cornerRadius="@dimen/_5sdp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_no_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins"
        android:text="@string/signing_up"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>